syntax = "proto3";
package helios.hyperion.v1;

import "helios/hyperion/v1/attestation.proto";
// import "helios/hyperion/v1/types.proto";

option go_package = "helios-core/helios-chain/x/hyperion/types";

// OutgoingTxBatch represents a batch of transactions going from Hyperion to ETH
message OutgoingTxBatch {
  uint64 hyperion_id = 1;
  uint64 batch_nonce = 2;
  uint64 batch_timeout = 3;
  repeated OutgoingTransferTx transactions = 4;
  string token_contract = 5;
  uint64 block = 6;
}

// OutgoingTransferTx represents an individual send from Hyperion to ETH
message OutgoingTransferTx {
  uint64 hyperion_id = 1;
  uint64 id = 2;
  string sender = 3;
  string dest_address = 4;
  ERC20Token erc20_token = 5;
  ERC20Token erc20_fee = 6;
  uint64 tx_timeout = 7;
}
