syntax = "proto3";
package helios.hyperion.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/authz/v1beta1/tx.proto";
import "amino/amino.proto";
import "helios/hyperion/v1/types.proto";
import "helios/hyperion/v1/msgs.proto";
import "helios/hyperion/v1/params.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "helios-core/helios-chain/x/hyperion/types";

message HyperionProposal {
  option (amino.name) = "hyperion/HyperionProposal";
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (cosmos_proto.implements_interface) = "cosmos.gov.v1beta1.Content";

  string title = 1; // Title of the proposal
  string description = 2; // Description of the proposal
  string msg = 3; // Message to be executed
}
